Fixes an issues with margins on mobile screens

--- a/main.css
+++ b/main.css
@@ -102,7 +102,7 @@ header {
 
 .writing h1 {
   font-family: Cambria, serif;
-  font-weight: 100;
+  /* font-weight: 100; */
   margin-bottom: 40px;
   /* left: 30%; */
   /* margin-left: 10%; */
@@ -141,16 +141,15 @@ header {
   .writing .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 75%;
+    width: 70%;
     background-color: #22447a;
     margin-bottom: 20px;
     display: inline-block;
   }
 
   .writing h1 {
-    margin: 20px;
-    /* left: 30%; */
-    /* margin-left: 10%; */
+    margin-top: 30px;
+    margin-bottom: 5px;
   }
 
 }
